@@ -1,4 +1,4 @@
-package eu.bbmri.eric.csit.service.negotiator.integration;
+package eu.bbmri.eric.csit.service.negotiator.integration.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -24,7 +24,10 @@ import eu.bbmri.eric.csit.service.negotiator.service.PostService;
 import eu.bbmri.eric.csit.service.negotiator.service.ResourceLifecycleService;
 import eu.bbmri.eric.csit.service.negotiator.service.UserNotificationService;
 import eu.bbmri.eric.csit.service.negotiator.unit.context.WithMockNegotiatorUser;
+import jakarta.transaction.Transactional;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -35,6 +38,7 @@ import org.springframework.test.context.ActiveProfiles;
 @SpringBootTest
 @ActiveProfiles("test")
 @DirtiesContext(classMode = DirtiesContext.ClassMode.BEFORE_EACH_TEST_METHOD)
+@Transactional
 public class UserNotificationServiceTest {
 
   @Autowired UserNotificationService userNotificationService;
@@ -56,11 +60,7 @@ public class UserNotificationServiceTest {
   void getNotifications_1_ok() {
     Person person =
         personRepository.save(
-            Person.builder()
-                .authSubject("823")
-                .authName("John")
-                .authEmail("test@test.com")
-                .build());
+            Person.builder().subjectId("823").name("John").email("test@test.com").build());
     Negotiation negotiation = negotiationRepository.findAll().get(0);
     notificationRepository.save(
         Notification.builder()
@@ -142,7 +142,7 @@ public class UserNotificationServiceTest {
   void notifyRepresentatives_resWithNoRep_markedAsUnreachable() {
     Negotiation negotiation = negotiationRepository.findById("negotiation-1").get();
     Resource resource = resourceRepository.findBySourceId("biobank:1:collection:1").get();
-    resource.setRepresentatives(Set.of());
+    resource.setRepresentatives(Collections.emptySet());
     Resource resource2 = resourceRepository.save(resource);
     System.out.println(resource2.getRepresentatives().size());
     negotiation = negotiationRepository.findById(negotiation.getId()).get();
@@ -238,9 +238,14 @@ public class UserNotificationServiceTest {
         negotiation.getRequests().iterator().next().getResources().iterator().next();
     Person representative =
         resource1.getRepresentatives().stream()
-            .filter(person -> !person.getId().equals(109L))
+            .filter(
+                person ->
+                    !person
+                        .getId()
+                        .equals(negotiation.getPersons().iterator().next().getPerson().getId()))
             .findFirst()
             .get();
+    assertTrue(Objects.nonNull(representative.getId()));
     assertTrue(notificationRepository.findByRecipientId(representative.getId()).isEmpty());
     postService.create(
         PostCreateDTO.builder()
